# fast-readability

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  install.py  pyproject.toml  requirements.txt  test_package.py
examples/: basic_usage.py
experiment/: test.py  test_ru.html
fast_readability/: __init__.py  cli.py  readability.py  utils.py
fast_readability/js/: readability_wrapper.js
tests/: __init__.py  test_readability.py  test_utils.py
