[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-readability"
version = "0.1.0"
description = "A Python library that uses QuickJS to call Mozilla's readability.js, implementing all its functionality"
authors = [
    {name = "darkqiank", email = "darkqiank@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
keywords = ["readability", "javascript", "quickjs", "mozilla", "html", "text-extraction"]

dependencies = [
    "quickjs>=1.19.2",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/darkqiank/fast-readability"
Repository = "https://github.com/darkqiank/fast-readability"
Issues = "https://github.com/darkqiank/fast-readability/issues"

[project.scripts]
fast-readability = "fast_readability.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_readability*"]

[tool.setuptools.package-data]
fast_readability = ["js/*.js"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 